--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,11 +1,32 @@
 <section class="orders-show">
+    <%= @order.line_items.inspect %>
 
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
   </header>
-
   <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+    <h3>Thank you for your order <%= @order.email %>!</h3>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th colspan="2">Product</th>
+            <th>Unit Price</th>
+            <th>Quantity</th>
+          </tr>
+        </thead>
+        <tbody>
+      <% @order.line_items.each do |line| %>
+        <%= render 'order', item: line %>
+      <% end %>
+    </tbody>
+  </table>
+  </td>
+  <h4> 
+    Total: 
+     <%= humanized_money_with_symbol @order.total_cents.to_f / 100 %>
+  </h4>
+
+  </td>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
