updates admin dashboard with information

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<%# @import "bootstrap"; %>
+
+<h1>Admin Dashboard</h1>
+
+<h3> Total Categories: <%= @totalc %> </h3>
+<h3> Total Products: <%= @totalp %></h3>
+
