--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -13,4 +13,8 @@
     <td>
     <%= item.quantity %>
   </td>
+  </td>
+    Total: 
+    <%= humanized_money_with_symbol item.product.price * item.quantity %>
+  </td>
 </tr>
