--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,27 @@
 <h1>Signup!</h1>
 
+<%# <div class="col-sm-6 col-sm-offset-1"> %>
+
 <%= form_for :user, url: '/users' do |f| %>
+<div class="form-group">
+<label class="col-sm-2 col-form-label">Name: </label>
+  <%= f.text_field :name %>
+</div>
+<div class="form-group">
+<label class="col-sm-2 col-form-label">Email: </label>
 
-  Name: <%= f.text_field :name %>
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
+<%= f.text_field :email %>
+</div>
+<div class="form-group">
+<label class="col-sm-2 col-form-label">Password: </label>
+
+<%= f.password_field :password %>
+</div>
+<div class="form-group">
+<label class="col-sm-2 col-form-label">Password Confirmation: </label>
+
+<%= f.password_field :password_confirmation %>
+</div>
   <%= f.submit "Submit" %>
-
+  </div>
 <% end %>
