--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,25 +3,33 @@
 <%# <div class="col-sm-6 col-sm-offset-1"> %>
 
 <%= form_for :user, url: '/users' do |f| %>
+
 <div class="form-group">
-<label class="col-sm-2 col-form-label">Name: </label>
+  <label class="col-sm-2 col-form-label">Fist Name: </label>
   <%= f.text_field :name %>
 </div>
-<div class="form-group">
-<label class="col-sm-2 col-form-label">Email: </label>
 
+<div class="form-group">
+  <label class="col-sm-2 col-form-label">Last Name: </label>
+  <%= f.text_field :last_name %>
+</div>
+
+<div class="form-group">
+  <label class="col-sm-2 col-form-label">Email: </label>
 <%= f.text_field :email %>
 </div>
-<div class="form-group">
-<label class="col-sm-2 col-form-label">Password: </label>
 
+<div class="form-group">
+  <label class="col-sm-2 col-form-label">Password: </label>
 <%= f.password_field :password %>
 </div>
-<div class="form-group">
-<label class="col-sm-2 col-form-label">Password Confirmation: </label>
 
+<div class="form-group">
+  <label class="col-sm-2 col-form-label">Password Confirmation: </label>
 <%= f.password_field :password_confirmation %>
 </div>
+
   <%= f.submit "Submit" %>
   </div>
+
 <% end %>
